--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "react-rough-notation": "^1.0.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
